compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Person {\n  Person(name: String, age: Int)\n}\npub fn update_person() {\n  Person(..person)\n}"
---
----- SOURCE CODE

pub type Person {
  Person(name: String, age: Int)
}
pub fn update_person() {
  Person(..person)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:12
  │
6 │   Person(..person)
  │            ^^^^^^ Did you mean `Person`?

The name `person` is not in scope here.
